# aonnbrain

./: .env.example  .gitignore  AONN网络.docx  AONN网络.pages  AONN网络.txt  README.md  README_RUN.md  README_V3.md  README_V3_WORLD_MODEL.md  pyproject.toml  requirements.txt  train_mnist_baseline.py
configs/: brain_default.yaml  llm_aspect_openai.yaml  training_default.yaml
data/: evolution_log.json  general_ai_cogito32b_500steps.json  general_ai_lineworm_config_50steps.json  general_ai_no_llm_50steps.json  general_ai_results.json  high_complexity_results.json  lineworm_200.json  lineworm_300.json  lineworm_50.json  lineworm_complex_200.json  lineworm_complex_nopipe_1000.json  lineworm_complex_pipe_1000.json  lineworm_limited_pipe_1000.json  lineworm_long.json  lineworm_nopipe.json  lineworm_nopipe_1000.json  lineworm_pipe_1000.json  lineworm_results.json  lineworm_verbose.json  long_run_400.json  long_run_results.json  long_verbose.json  mnist_100steps.json  mnist_500steps_with_f.json  mnist_active_inference_200steps.json  mnist_active_inference_v2_1000steps.json  mnist_active_inference_v2_test.json  mnist_aligned_1000steps.json  mnist_aligned_fixed_200steps.json  mnist_aligned_results.json  mnist_aonn_baseline.json  mnist_auto_100steps.json  mnist_auto_500steps.json  mnist_auto_50steps.json  mnist_auto_evolution_200steps.json  mnist_auto_evolution_60000steps.json  mnist_batch128_200steps.json  mnist_classification_only_200steps.json  mnist_conv_1000steps.json  mnist_epoch5.json  (+48 more)
docs/: AONN_ARCHITECTURE_COMPARISON.md  AONN_MNIST_EVOLUTION.md  AONN_UNIFIED_ARCHITECTURE.md  (+24 more)
(+105 files in other folders)
